fix(chat): horizontal & vertical scrollbar issues

--- a/src/components/chat/themes/chat.base.scss
+++ b/src/components/chat/themes/chat.base.scss
@@ -21,7 +21,15 @@ $inline-inset: rem(16px);
   height: 100%;
 }
 
-[part='chat-messages'],
+[part='chat-wrapper'] {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden auto;
+  width: 100%;
+  flex: 1;
+  align-items: center;
+}
+
 [part='empty-state'],
 [part='suggestions-container'] {
   max-width: calc(rem(760px) + $inline-inset * 2);
@@ -64,4 +72,13 @@ igc-list {
 
   min-height: fit-content;
   padding-block-end: rem(24px);
+}
+
+igc-list-header,
+igc-list-item {
+  max-width: rem(576px);
+}
+
+igc-list-item {
+  cursor: pointer;
 }
