--- a/src/components/chat/themes/input.base.scss
+++ b/src/components/chat/themes/input.base.scss
@@ -36,6 +36,7 @@
         width: 0;
         aspect-ratio: 1;
         inset: 0;
+        opacity: 0;
     }
 }
 
