--- a/src/components/chat/themes/message.base.scss
+++ b/src/components/chat/themes/message.base.scss
@@ -30,4 +30,17 @@
     margin: 0;
     padding: 0;
   }
+
+  a {
+    overflow-wrap: anywhere;
+    word-break: break-word;
+    color: color(primary, 500);
+  }
 }
+
+pre, code {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow-x: auto;
+}
+
